# genai-security

./: README.md  pyproject.toml
llm/: direct_prompt_injection.ipynb  direct_prompt_injection_gemini.ipynb  direct_prompt_injection_with_ccf.ipynb  embedding_inversion.ipynb  emojis_encodings.ipynb  fatigue_jailbreak.ipynb  flip_attack.ipynb  h-cot.ipynb  knowledge_editing.ipynb  matching_delineation.ipynb  multi_hop_easoning.ipynb  rebel_research.ipynb
mcp/: indirect_injection.ipynb  indirect_injection.py  rce.ipynb  rce.py  tool_poisoning.ipynb  tool_poisoning.py  tool_shadowing.ipynb  tool_shadowing.py
mcp/data/: analysis-injection.txt  analysis.txt  secret.txt
