[project]
name = "llmsec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.9.2",
    "fastmcp>=2.3.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "litellm>=1.67.5",
    "openai>=1.78.1",
    "openinference-instrumentation-smolagents>=0.1.11",
    "python-dotenv>=1.1.0",
    "smolagents[azure,mcp]>=1.16.1",
    "vec2text>=0.0.13",
]
